--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ img {
 
 .link {
     text-decoration: none;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .list {
@@ -77,6 +77,7 @@ img {
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--brand-color);
+    padding: 24px 0 25px;
 }
 
 .logo-header-span {
@@ -86,8 +87,6 @@ img {
 .nav-container {
     display: flex;
     align-items: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
 }
 
 .nav {
@@ -101,11 +100,7 @@ img {
     letter-spacing: 0.02em;
     margin-left: 95px;
     display: flex;
-    justify-content: space-between;
-}
-
-.nav-list .nav-item {
-    margin-right: 50px;
+    gap: 50px;
 }
 
 .nav-list .nav-item:last-child {
@@ -159,7 +154,7 @@ img {
 .order-service {
     background-color: var(--background);
     text-align: center;
-    padding: 195px 226px 200px;
+    padding: 200px 0;
 }
 
 .main-title {
@@ -174,7 +169,6 @@ img {
 }
 
 .btn-primary {
-    min-width: 200px;
     background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -186,6 +180,7 @@ img {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--accent-color);
+    padding: 10px 32px;
 }
 
 .btn-primary:hover,
@@ -198,15 +193,7 @@ img {
 
 .features-list {
     display: flex;
-    justify-content: space-between;
-}
-
-.feature-item {
-    margin-right: 30px;
-}
-
-.features-list .feature-item:last-child {
-    margin-right: 0;
+    gap: 30px;
 }
 
 .visually-hidden {
@@ -252,18 +239,15 @@ img {
 .work-list {
     display: flex;
     justify-content: center;
-}
-
-.work-item {
-    margin-right: auto;
-}
-
-.work-list .work-item:last-child {
-    margin-right: 0;
+    gap: 30px;
 }
 
 
 /* Our team */
+
+.our-team {
+    background-color: var(--portfolio-bcg-color);
+}
 
 .our-team-title {
     margin-bottom: 50px;
@@ -271,6 +255,7 @@ img {
 
 .team-list {
     display: flex;
+    gap: 30px;
 }
 
 .team-item {
@@ -280,14 +265,6 @@ img {
     border-radius: 0px 0px 4px 4px;
 }
 
-.photo-team {
-    margin-bottom: 30px;
-}
-
-.team-list .team-item:last-child {
-    margin-right: 0;
-}
-
 .work-title,
 .our-team-title {
     font-weight: 700;
@@ -295,6 +272,10 @@ img {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+}
+
+.team-wrap {
+    padding: 30px 59px;
 }
 
 .team-list .title {
@@ -318,10 +299,13 @@ img {
 
 /* Footer */
 
-.address {
-    padding-top: 60px;
-    font-style: normal;
+.footer {
+    padding: 60px 0;
     background-color: var(--background);
+}
+
+.address {
+    font-style: normal;
 }
 
 .logo-footer {
@@ -331,6 +315,7 @@ img {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--brand-color);
+    padding: 0;
 }
 
 .logo-footer-span {
@@ -339,7 +324,6 @@ img {
 
 .contacts {
     margin-top: 20px;
-    padding-bottom: 60px;
 }
 
 .contacts .contacts-item {
@@ -355,6 +339,7 @@ img {
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--accent-color);
+    padding: 0;
 }
 
 .contact-item-link {
@@ -362,13 +347,17 @@ img {
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--foot-color);
+    padding: 0;
 }
 
 
 /* portfolio css */
 
-.portfolio {
-    margin-top: 98px;
+.filters {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 46px;
+    gap: 8px;
 }
 
 .portfolio-btn {
@@ -384,6 +373,7 @@ img {
     text-align: center;
     letter-spacing: 0.03em;
     cursor: pointer;
+    padding: 6px 22px;
 }
 
 .portfolio-btn:hover,
@@ -399,7 +389,6 @@ img {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    margin-top: 20px;
     margin-bottom: 4px;
 }
 
@@ -409,33 +398,21 @@ img {
     line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--second-color);
-    margin-bottom: 20px;
-}
-
-.filters {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 46px;
-}
-
-.filters .filters-item {
-    margin-right: 8px;
-}
-
-.filters .filters-item:last-child {
-    margin-right: 0;
 }
 
 .projects {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+    gap: 30px;
 }
 
 .projects>.projects-item {
+    width: calc((100% - 60px) / 3);
+}
+
+.item-wrap {
     border-bottom: 1px solid #eeeeee;
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-    margin-top: 30px;
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
+    padding: 20px 24px;
 }
